--- a/control.css
+++ b/control.css
@@ -1,7 +1,7 @@
 /* style.css */
 body {
   font-family: 'Roboto', sans-serif;
-  background: url(/assets/img/fondopwa2.jpg);
+  background: url(fondopwa2.jpg);
   background-position: center;
   background-size: cover;
   min-height: 100vh;
