--- a/configuraciongeneral.css
+++ b/configuraciongeneral.css
@@ -12,7 +12,7 @@ html{
 }
 
 body{
-    background: url(/assets/img/fondorenta.jpg);
+    background: url(fondorenta.jpg);
     background-position: center;
     background-size: cover;
     min-height: 100vh;
